# LogicLoom_Testing

./: .gitignore  README.md  Test_Cases_TMPMS.md  conftest.py  pyproject.toml
pages/: base_page.py  client_page.py  login_page.py  sales_order_page.py  work_order_page.py
reports/: report.html
tests/: test_tmpms.py  test_work_order_only.py
utils/: data_generator.py  generate_pdfs.py
